# pulsekit-mono

./: .gitignore  README.md
.cursor/plans/: pulsekit_dashboard_features_6981a41a.plan.md  pulsekit_mvp_plan_e3947644.plan.md
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  env.example
examples/: README.md
examples/elixir/: test_pulsekit.exs
examples/go/: main.go
sdks/: Makefile  README.md  build.ps1  build.sh
sdks/elixir/: LICENSE  README.md  mix.exs
sdks/elixir/doc/: .build  404.html  PulseKit.Client.html  PulseKit.html  api-reference.html  index.html  pulsekit.epub  readme.html  search.html
sdks/elixir/lib/: pulsekit.ex
sdks/elixir/lib/pulsekit/: application.ex  client.ex
sdks/go/: README.md  go.mod  pulsekit.go
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: lib.rs
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: index.ts
server/: .gitignore  README.md  mix.exs
server/assets/css/: app.css
server/assets/js/: app.js
server/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
server/lib/: pulsekit.ex  pulsekit_web.ex
server/lib/pulsekit/: accounts.ex  alerts.ex  application.ex  events.ex  issues.ex  log_cleaner.ex  organizations.ex  projects.ex  release.ex  repo.ex  settings.ex
server/lib/pulsekit/accounts/: user.ex
server/lib/pulsekit/alerts/: alert_rule.ex
server/lib/pulsekit_web/: endpoint.ex  router.ex  telemetry.ex
server/priv/repo/: seeds.exs
server/test/: test_helper.exs
server/test/support/: conn_case.ex  data_case.ex
(+303 files in other folders)
