[package]
name = "pulsekit"
version = "1.0.0"
edition = "2021"
description = "PulseKit SDK for Rust - Error tracking and event monitoring"
license = "MIT"
repository = "https://github.com/pulsekit/pulsekit"
keywords = ["pulsekit", "error-tracking", "monitoring", "observability", "logging"]
categories = ["development-tools::debugging", "web-programming"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time", "rt"], optional = true }
backtrace = "0.3"
parking_lot = "0.12"

[features]
default = ["async"]
async = ["tokio", "reqwest/default-tls"]
blocking = ["reqwest/blocking"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

